--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
     color: #f5f5f5;
     overflow-x: hidden; /* Prevent horizontal scrolling */
     line-height: 1.6;
+    text-underline-offset: 6px;
 }
 
 .navbar {
@@ -33,6 +34,16 @@ body {
     text-decoration: none;
     white-space: nowrap;
     margin: 0; /* Remove margin */
+}
+
+.changelog
+{
+    margin-left: 75px;
+}
+
+.changelog h1, h3 {
+    text-decoration: underline;
+    text-decoration-thickness: 3px;
 }
 
 .username:hover {
