--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     color: #f5f5f5;
     overflow-x: hidden; /* Prevent horizontal scrolling */
     line-height: 1.6;
-    text-underline-offset: 6px;
+    text-underline-offset: 4px;
 }
 
 .navbar {
@@ -115,7 +115,7 @@ header, section {
 
 header {
     text-align: center;
-    padding: 100px 20px;
+    padding: 50px 20px;
 }
 
 header .header-image {
@@ -128,7 +128,7 @@ header .header-image {
 }
 
 .section {
-    padding: 30px 0px;
+    padding: 0px 0px;
     text-align: center;
     background-color: #1e1e1e;
 }
@@ -195,13 +195,16 @@ h2 {
 
 .projects-item h3 {
     margin: 10px 0 5px;
-    padding: 5px;
-    line-height: 1.2;
+    padding: 0px;
+    line-height: 1.3;
+    text-decoration: underline;
+    text-underline-offset: 5px;
     font-size: 1.3em;
     text-align: center;
 }
 
 .projects-item p {
+    line-height: 1.3;
     margin: 5px 0;
     padding: 0 10px;
     font-size: 1em;
@@ -236,7 +239,7 @@ h2 {
 }
 
 .art-image:hover {
-    transform: scale(1.05);
+    transform: scale(1.15);
 }
 
 .art-item h3 {
@@ -247,7 +250,7 @@ h2 {
 }
 
 .music-container {
-    max-width: 850px;
+    max-width: 950px;
     width: 100%;
     margin: 0 auto;
     display: flex;
