--- a/styles.css
+++ b/styles.css
@@ -319,6 +319,10 @@ h2 {
     margin-top: 0;
 }
 
+.blog-button {
+    margin-left: 10px;
+  }
+
 .blog-item .blog-meta {
     font-size: 0.9em;
     color: #bbb;
